--- a/project_management_tool/src/main/resources/application.properties
+++ b/project_management_tool/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-server.port=8080
+spring.jpa.show-sql=true
+
+spring.datasource.url = jdbc:mysql://localhost:3306/ppmtool
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
