--- a/ppmtool-react-client/package.json
+++ b/ppmtool-react-client/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.1",
-    "bootstrap": "^4.3.1",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^5.1.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.2.0",
-    "redux": "^4.0.4",
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -21,17 +21,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "proxy": "http://localhost:8080"
 }
